--- a/app/src/main/res/layout/activity_konfirmasi_top_up.xml
+++ b/app/src/main/res/layout/activity_konfirmasi_top_up.xml
@@ -102,6 +102,7 @@
     <ProgressBar
         android:visibility="gone"
         android:id="@+id/progressBar"
+        android:elevation="7dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
