--- a/app/src/main/res/layout/activity_history_bayar_student.xml
+++ b/app/src/main/res/layout/activity_history_bayar_student.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="HIstory Pembayaran"
+        android:text="History Pembayaran"
         android:textColor="@color/black"
         android:textSize="24sp" />
 
