--- a/app/src/main/res/layout/activity_profile_student.xml
+++ b/app/src/main/res/layout/activity_profile_student.xml
@@ -14,7 +14,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_centerInParent="true">
+            android:layout_centerInParent="true"
+            android:padding="16dp">
 
             <TableLayout
                 android:layout_width="match_parent"
