--- a/app/src/main/res/layout/activity_profile_teacher.xml
+++ b/app/src/main/res/layout/activity_profile_teacher.xml
@@ -10,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_centerInParent="true">
+        android:layout_centerInParent="true"
+        android:padding="16dp">
 
         <TableLayout
             android:layout_width="match_parent"
