Add: Liat Absensi oleh guru, baru sampe pilih kelas, belom beres buat list siswa setelah milih kelas.

--- a/app/src/main/res/layout/activity_profile_teacher.xml
+++ b/app/src/main/res/layout/activity_profile_teacher.xml
@@ -102,11 +102,17 @@
             android:text="Absen"
             android:layout_marginTop="20dp"/>
         <Button
+            android:id="@+id/buttonDaftarAbsen"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Daftar Absen"
+            android:layout_marginTop="8dp"/>
+        <Button
             android:id="@+id/buttonLogout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Logout"
-            android:layout_marginTop="8dp"/>
+            android:layout_marginTop="20dp"/>
     </LinearLayout>
 
 </RelativeLayout>
