--- a/app/src/main/res/layout/activity_tampil_absensi.xml
+++ b/app/src/main/res/layout/activity_tampil_absensi.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Absensi Kelas <Belum Beres>"
+        android:text="Absensi Kelas"
         android:textColor="@color/black"
         android:textSize="24sp" />
 
