Add: 1. Akun Ortu

--- a/app/src/main/res/layout/activity_history_absen.xml
+++ b/app/src/main/res/layout/activity_history_absen.xml
@@ -9,7 +9,7 @@
     android:paddingRight="16dp"
     android:paddingTop="16dp"
     android:paddingBottom="16dp"
-    tools:context=".student.TampilJadwal"
+    tools:context=".guardians.HistoryAbsenActivity"
     android:gravity="center">
 
     <TextView
@@ -17,13 +17,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Test"
+        android:text="History Absensi"
         android:textColor="@color/black"
         android:textSize="24sp" />
 
     <ListView
+        android:layout_marginTop="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/listView" />
+
+    <ProgressBar
+        android:visibility="gone"
+        android:id="@+id/progressBar"
+        android:elevation="7dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
