--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,13 @@
             android:checked="true"/>
 
         <RadioButton
+            android:id="@+id/radioWaliSiswa"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Wali"
+            android:checked="true"/>
+
+        <RadioButton
             android:id="@+id/radioGuru"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
