Add: 1. Fitur melihat absensi hari ini

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,8 +53,7 @@
             android:id="@+id/radioWaliSiswa"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Wali"
-            android:checked="true"/>
+            android:text="Wali"/>
 
         <RadioButton
             android:id="@+id/radioGuru"
