--- a/app/src/main/res/layout/activity_tampil_absensi.xml
+++ b/app/src/main/res/layout/activity_tampil_absensi.xml
@@ -23,6 +23,15 @@
         android:layout_height="wrap_content"
         android:id="@+id/listView" />
 
+    <TextView
+        android:id="@+id/tvTotal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:text="Total"
+        android:textColor="@color/black"
+        android:textSize="24sp" />
+
     <ProgressBar
         android:visibility="gone"
         android:id="@+id/progressBar"
