Revisi Sidang: 1. Di akun wali, di absen anaknya, bisa liat yg kemarin2 (absen 1 bulan) 2. Rekap pembayaran, di akun bendahara (1 bulan) 3. Rekap kehadiran, di akun guru (1 bulan)

--- a/app/src/main/res/layout/activity_profile_teacher.xml
+++ b/app/src/main/res/layout/activity_profile_teacher.xml
@@ -108,6 +108,12 @@
             android:text="Daftar Absen"
             android:layout_marginTop="8dp"/>
         <Button
+            android:id="@+id/buttonRekapAbsen"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Rekap Absen"
+            android:layout_marginTop="8dp"/>
+        <Button
             android:id="@+id/buttonLogout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
