--- a/app/src/main/res/layout/list_item_absensi_guardians.xml
+++ b/app/src/main/res/layout/list_item_absensi_guardians.xml
@@ -5,6 +5,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/tvTanggal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tanggal"
+        android:textColor="#000"
+        android:textAlignment="center"
+        android:layout_gravity="center"
+        android:textSize="20sp" />
+
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -12,98 +22,36 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tanggal"
-                android:paddingEnd="10dp"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
-            <TextView
-                android:id="@+id/tvTanggal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingEnd="10dp"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
-        </TableRow>
-        <TableRow>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Hari"
-                android:paddingEnd="10dp"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
-            <TextView
-                android:id="@+id/tvHari"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingEnd="10dp"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
-        </TableRow>
-        <TableRow>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Jam Pelajaran"
-                android:paddingEnd="10dp"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
-            <TextView
-                android:id="@+id/tvJampel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingEnd="10dp"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
-        </TableRow>
-        <TableRow>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Jam Absen"
-                android:paddingEnd="10dp"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
-            <TextView
-                android:id="@+id/tvJamAbsen"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingEnd="10dp"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
-        </TableRow>
-        <TableRow>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/matpelHeader"
+                android:textColor="#000"
                 android:text="Mata Pelajaran"
                 android:paddingEnd="10dp"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/kehadiranHeader"
+                android:textColor="#000"
+                android:text="Kehadiran"
+                android:paddingEnd="10dp"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
+        </TableRow>
+        <TableRow>
+            <TextView
                 android:id="@+id/tvMatpel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="#000"
                 android:paddingEnd="10dp"
-                android:paddingBottom="10dp"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
+            <TextView
+                android:id="@+id/tvKehadiran"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#000"
+                android:paddingEnd="10dp"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
         </TableRow>
     </TableLayout>
-
-<!--    <TextView-->
-<!--        android:id="@+id/tvTanggal"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/tvHari"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/tvJampel"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/tvJamAbsen"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/tvMatpel"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content" />-->
 
 </LinearLayout>
