--- a/app/src/main/res/layout/list_item_pembayaran_treasurer.xml
+++ b/app/src/main/res/layout/list_item_pembayaran_treasurer.xml
@@ -15,29 +15,25 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#000"
-                android:paddingEnd="10dp"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
+                android:paddingEnd="10dp"/>
             <TextView
                 android:id="@+id/nis"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#000"
-                android:paddingEnd="10dp"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
+                android:paddingEnd="10dp"/>
             <TextView
                 android:id="@+id/bulan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#000"
-                android:paddingEnd="10dp"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
+                android:paddingEnd="10dp"/>
             <TextView
                 android:id="@+id/nominal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#000"
-                android:paddingEnd="10dp"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
+                android:paddingEnd="10dp"/>
         </TableRow>
     </TableLayout>
 
