--- a/app/src/main/res/layout/list_item_absensi_teacher.xml
+++ b/app/src/main/res/layout/list_item_absensi_teacher.xml
@@ -12,7 +12,8 @@
         android:text="Kelas"
         android:textColor="#000"
         android:textAlignment="center"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:textSize="20sp"/>
 
     <TableLayout
         android:layout_width="match_parent"
